Fixed font-size on mobile devices

--- a/styles/content.css
+++ b/styles/content.css
@@ -181,7 +181,7 @@
 @media(max-width: 500px) {
   .code {
     padding: 10px 20px;
-    font-size: 12px;
+    font-size: 11px;
     margin: 40px 0;
   }
 }
